<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="rafsanches.com.br.pi_chamada.ProfessorActivity"
    android:id="@+id/activity_professor"
    android:orientation="vertical"
    android:background="@drawable/main_gradient">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="@dimen/tittle_margin"
        >

        <TextView
            android:id="@+id/professor_nomeTextView"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:paddingStart="@dimen/professor_tittle_paddingStart"
            android:hint="Nome Professor"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="@dimen/tittle_textSize"
            />

        <Button
            android:id="@+id/professor_sairButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sair_button"
            android:onClick="sair"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/activity_professor_nome"
        android:orientation="horizontal"
        android:background="@color/colorPrimaryDark"
        android:layout_gravity="center"
        >

        <TextView
            android:id="@+id/professor_matriculaTextView"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="start"
            android:padding="@dimen/professorTextView_padding"
            android:hint="Matricula Professor"
            android:textColor="@color/color_listaProfessor_header"
            android:textSize="@dimen/professorTextView_textSize"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/professor_dataTextView"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="@dimen/professorTextView_padding"
            android:hint="data"
            android:textColor="@color/color_listaProfessor_header"
            android:textSize="@dimen/professorTextView_textSize"
            android:textStyle="bold"
            />

    </LinearLayout>

    <TextView
        android:id="@+id/professor_materiaTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColor="@color/color_listaProfessor_header"
        android:padding="@dimen/professorTextView_padding"
        android:text="@string/professor_materias_text"
        android:textSize="@dimen/professorTextView_textSize"
        android:textStyle="bold"
        android:gravity="center"
        android:background="@color/colorPrimaryDark"
        android:layout_margin="@dimen/professor_tittle_margin"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:padding="10dp"
        android:layout_margin="10dp"
        >

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/materiasRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="vertical"
            tools:context=".ProfessorActivity"
            tools:showIn="@layout/activity_professor"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="fill"
        >

        <Button
            android:id="@+id/professor_listaMateriasButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/professor_lista_materia_button"
            android:layout_margin="@dimen/professor_tittle_margin"
            android:onClick="listarMaterias"
            android:textAllCaps="false"
            />

        <Button
            android:id="@+id/professor_mostrarCalendarButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/professor_calendario_button"
            android:layout_margin="@dimen/professor_tittle_margin"
            android:onClick="mostrarCalendar"
            android:textAllCaps="false"
            />

    </LinearLayout>

</LinearLayout>