<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AlunoMateriasActivity"
    android:orientation="vertical"
    android:background="@drawable/main_gradient"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="@dimen/tittle_margin"
        >

        <TextView
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:layout_margin="@dimen/tittle_margin"
            android:paddingStart="@dimen/aluno_tittle_paddingStart"
            android:text="@string/aluno_tittle"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="@dimen/tittle_textSize"
            />

        <Button
            android:id="@+id/voltarbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/sair_button"
            android:text="@string/voltar_button"
            android:onClick="voltar"/>

        <Button
            android:id="@+id/sairButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/sair_button"
            android:text="@string/sair_button"
            android:onClick="sair"/>

    </LinearLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:rowCount="4"
        android:columnCount="3"
        android:useDefaultMargins="true"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnSpan="3"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_marginLeft="@dimen/aluno_header_margin"
            android:layout_marginTop="@dimen/aluno_header_margin"
            android:layout_marginRight="@dimen/aluno_header_margin"
            android:paddingTop="10dp"
            android:textStyle="bold"
            android:text="Arquitetura de Sistemas e Soluções de Tecnologia da Informação (CCP3DN-MCB)" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_marginLeft="@dimen/aluno_header_margin"
            android:layout_marginBottom="@dimen/aluno_header_margin"
            android:layout_marginRight="@dimen/aluno_header_margin"
            android:layout_gravity="start"
            android:text="Sala: 207-C"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_marginLeft="@dimen/aluno_header_margin"
            android:layout_marginBottom="@dimen/aluno_header_margin"
            android:layout_marginRight="@dimen/aluno_header_margin"
            android:layout_gravity="center"
            android:text="Presença: 100%"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="2"
            android:layout_marginLeft="@dimen/aluno_header_margin"
            android:layout_marginBottom="@dimen/aluno_header_margin"
            android:layout_marginRight="@dimen/aluno_header_margin"
            android:layout_gravity="end"
            android:text="Faltas: 0"
            />





        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnSpan="3"
            android:layout_row="2"
            android:layout_column="0"
            android:paddingTop="10dp"
            android:layout_marginLeft="@dimen/aluno_header_margin"
            android:layout_marginTop="@dimen/aluno_header_margin"
            android:layout_marginRight="@dimen/aluno_header_margin"
            android:textStyle="bold"
            android:text="Desenvolvimento Mobile e Internet das Coisas (CCP3DN-MCB)" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_column="0"
            android:layout_marginLeft="@dimen/aluno_header_margin"
            android:layout_marginBottom="@dimen/aluno_header_margin"
            android:layout_marginRight="@dimen/aluno_header_margin"
            android:layout_gravity="start"
            android:text="Sala: 207-C"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_column="1"
            android:layout_marginLeft="@dimen/aluno_header_margin"
            android:layout_marginBottom="@dimen/aluno_header_margin"
            android:layout_marginRight="@dimen/aluno_header_margin"
            android:layout_gravity="center"
            android:text="Presença: 50%"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_column="2"
            android:layout_marginLeft="@dimen/aluno_header_margin"
            android:layout_marginBottom="@dimen/aluno_header_margin"
            android:layout_marginRight="@dimen/aluno_header_margin"
            android:layout_gravity="end"
            android:text="Faltas: 5"
            />

    </GridLayout>
    <!--    <ListView-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"/>-->


</LinearLayout>